@@ -33,6 +33,7 @@ module Gluon::Test
 
     def build_page(page_type)
       @controller = page_type.new
+      @action = Gluon::Action.new(@controller, @c, @params, @funcs)
     end
     private :build_page
 
@@ -52,18 +53,18 @@ module Gluon::Test
         out << "Hello world.\n"
       }
       build_page(PageForImplicitView)
-      assert_equal("Hello world.\n", @renderer.render(@controller, @c, @params, @funcs))
+      assert_equal("Hello world.\n", @renderer.render(@controller, @c, @action))
 
       10.times do |i|
         build_page(PageForImplicitView)
-        assert_equal("Hello world.\n", @renderer.render(@controller, @c, @params, @funcs), "nth: #{i}")
+        assert_equal("Hello world.\n", @renderer.render(@controller, @c, @action), "nth: #{i}")
       end
     end
 
     def test_view_implicit_not_exist
       build_page(PageForImplicitView)
       assert_raise(RuntimeError) {
-        @renderer.render(@controller, @c, @params, @funcs)
+        @renderer.render(@controller, @c, @action)
       }
     end
 
@@ -78,18 +79,18 @@ module Gluon::Test
         out << "Hello world.\n"
       }
       build_page(PageForExplicitView)
-      assert_equal("Hello world.\n", @renderer.render(@controller, @c, @params, @funcs))
+      assert_equal("Hello world.\n", @renderer.render(@controller, @c, @action))
 
       10.times do |i|
         build_page(PageForExplicitView)
-        assert_equal("Hello world.\n", @renderer.render(@controller, @c, @params, @funcs), "nth: #{i}")
+        assert_equal("Hello world.\n", @renderer.render(@controller, @c, @action), "nth: #{i}")
       end
     end
 
     def test_view_explicit_not_exist
       build_page(PageForExplicitView)
       begin
-        @renderer.render(@controller, @c, @params, @funcs)
+        @renderer.render(@controller, @c, @action)
         flunk('not to reach')
       rescue
         assert_instance_of(Errno::ENOENT, $!)
@@ -126,11 +127,11 @@ module Gluon::Test
       load(page_path)
 
       build_page(PageForDefaultView)
-      assert_equal("Hello world.\n", @renderer.render(@controller, @c, @params, @funcs))
+      assert_equal("Hello world.\n", @renderer.render(@controller, @c, @action))
 
       10.times do |i|
         build_page(PageForDefaultView)
-        assert_equal("Hello world.\n", @renderer.render(@controller, @c, @params, @funcs), "nth: #{i}")
+        assert_equal("Hello world.\n", @renderer.render(@controller, @c, @action), "nth: #{i}")
       end
     end
 
@@ -159,7 +160,7 @@ module Gluon::Test
 
       build_page(PageForDefaultViewNotExist)
       begin
-        @renderer.render(@controller, @c, @params, @funcs)
+        @renderer.render(@controller, @c, @action)
         flunk('not to reach')
       rescue
         assert_instance_of(Errno::ENOENT, $!)
@@ -200,11 +201,11 @@ module Gluon::Test
       load(page_path)
 
       build_page(PageForViewImplicitOverrideDefault)
-      assert_equal('bar', @renderer.render(@controller, @c, @params, @funcs))
+      assert_equal('bar', @renderer.render(@controller, @c, @action))
 
       10.times do |i|
         build_page(PageForViewImplicitOverrideDefault)
-        assert_equal('bar', @renderer.render(@controller, @c, @params, @funcs), "nth: #{i}")
+        assert_equal('bar', @renderer.render(@controller, @c, @action), "nth: #{i}")
       end
     end
 
@@ -243,11 +244,11 @@ module Gluon::Test
       load(page_path)
 
       build_page(PageForViewExplicitOverrideDefault)
-      assert_equal('bar', @renderer.render(@controller, @c, @params, @funcs))
+      assert_equal('bar', @renderer.render(@controller, @c, @action))
 
       10.times do |i|
         build_page(PageForViewExplicitOverrideDefault)
-        assert_equal('bar', @renderer.render(@controller, @c, @params, @funcs), "nth: #{i}")
+        assert_equal('bar', @renderer.render(@controller, @c, @action), "nth: #{i}")
       end
     end
 
@@ -284,7 +285,7 @@ module Gluon::Test
 
       build_page(PageForViewExplicitNotExistOverrideDefault)
       begin
-        @renderer.render(@controller, @c, @params, @funcs)
+        @renderer.render(@controller, @c, @action)
         flunk('not to reach')
       rescue
         assert_instance_of(Errno::ENOENT, $!)
@@ -304,13 +305,13 @@ module Gluon::Test
 
       build_page(NoMethodPage)
       assert_raise(NoMethodError) {
-        @renderer.render(@controller, @c, @params, @funcs)
+        @renderer.render(@controller, @c, @action)
       }
 
       10.times do |i|
         build_page(NoMethodPage)
         assert_raise(NoMethodError, "nth: #{i}") {
-          @renderer.render(@controller, @c, @params, @funcs)
+          @renderer.render(@controller, @c, @action)
         }
       end
     end
